# RustPractice

./: Cargo.toml  README.md
Chips8/: Cargo.toml
Chips8/src/: main.rs
chips_8/: Cargo.toml  build.rs
chips_8/src/: lib.rs  main.rs  old_main.txt
chips_8/src/core/: disassemble.rs  mod.rs  ops.rs  ops_test.rs  utils.rs
chips_8/src/gfx/: core.rs  init.rs  mod.rs  single.rs
chips_8/src/scenes/: mod.rs  rectangle.rs  scissor.rs  textured.rs  triangle.rs
chips_8/src/shaders/: scissor.frag  triangle.frag  triangle.vert
graph/: Cargo.toml  main.py  main.rs  main_test.rs
leetcode_sum/: Cargo.toml
leetcode_sum/src/: main.rs
rust_os/: Cargo.toml
rust_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
rust_os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
simple-rust-web-app/: 404.html  Cargo.toml  hello.html  new.html
simple-rust-web-app/src/net/: router.rs  server.rs
timer_future/src/: lib.rs  main.rs  timer_future.rs
