[package]
name = "chips_8"
version = "0.1.0"
authors = ["shafferchance <shafferchance@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
takeable-option = "0.4"
image = "0.21"

[build-dependencies]
gl_generator = "0.14"